# charter

./: .gitignore  README.md  charter.cabal
charter/: Main.hs
src/: Charter.hs  Templates.hs  Types.hs
