name:             charter
version:          0.1.0.0
-- synopsis:
-- description:
license:          BSD3
license-file:     LICENSE
author:           Getty Ritter <gdritter@galois.com>
maintainer:       Getty Ritter <gdritter@galois.com>
copyright:        ©2018 Getty Ritter
-- category:
build-type:       Simple
cabal-version:    >= 1.14

library
  exposed-modules:     Charter
  other-modules:       Templates
                     , Types
  hs-source-dirs:      src
  build-depends:       base >=4.7 && <5
                     , directory
                     , filepath
                     , process
                     , text
                     , lens-family-core
                     , lens-family-th
  default-language:    Haskell2010
  default-extensions:  ScopedTypeVariables

executable charter
  hs-source-dirs:      charter
  main-is:             Main.hs
  default-extensions:  ScopedTypeVariables
  ghc-options:         -Wall
  build-depends:       base >=4.7 && <5
                     , charter
                     , text
                     , lens-family-core
  default-language:    Haskell2010
